<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/appTitle"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editTextPanjang"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:gravity="center"
        android:layout_gravity="center"
        android:hint="@string/panjangTextHint"
        android:inputType="number"
        android:textColorHint="@color/hint" />

    <EditText
        android:id="@+id/editTextLebar"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:ems="20"
        android:layout_gravity="center"
        android:importantForAutofill="no"
        android:gravity="center"
        android:hint="@string/lebarTextHint"
        android:inputType="number"
        android:textColorHint="@color/hint" />

    <EditText
        android:id="@+id/editTextTinggi"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:ems="50"
        android:layout_gravity="center"
        android:gravity="center"
        android:importantForAutofill="no"
        android:hint="@string/tinggiTextHint"
        android:inputType="number"
        android:textColorHint="@color/hint" />

    <TextView
        android:id="@+id/editTextHasil"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/hasilDefault"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/buttonHitung" />
    <include layout="@layout/activity_copyrights"/>


</LinearLayout>
